syntax = "proto3";

option java_multiple_files = true;

package unknow.sync.proto;

message SyncMessage {
	oneof content {
		string token = 1;
		ProjectInfo project = 2;
		
		string file = 3;
		BlocList bloc = 4;
		
		GetBloc getbloc = 5;
		bytes data = 6;
		
		GetFile getfile = 7;
	}
}

message ProjectInfo {
	uint32 blocSize = 1;
	repeated FileInfo file = 2;
}

message FileInfo {
	string name = 1;
	uint64 size = 2;
	fixed64 hash = 3;
}

message BlocList {
	repeated BlocInfo blocs = 1;
}

message BlocInfo {
	fixed32 roll = 1;
	fixed64 hash = 2;
}

message GetBloc {
	string file = 1;
	uint32 bloc = 2;
}

message GetFile {
	string file = 1;
	uint64 offset = 2;
}